<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetCurrency">

    <TextView
        android:id="@+id/setCurrencyTitle"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/setCurrencyTitle"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/baseCurrencySpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/baseCurrencySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/baseCurrencySpinnerSpeakable"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/targetCurrencySpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/baseCurrencyTextView"
        app:layout_constraintTop_toBottomOf="@+id/setCurrencyTitle" />

    <Spinner
        android:id="@+id/targetCurrencySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="75dp"
        android:contentDescription="@string/targetCurrencySpinnerSpeakable"
        app:layout_constraintBottom_toTopOf="@+id/fetchRateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/targetCurrencyTextView"
        app:layout_constraintTop_toBottomOf="@+id/baseCurrencySpinner" />

    <TextView
        android:id="@+id/baseCurrencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="55dp"
        android:text="@string/baseCurrencyDropdown"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/targetCurrencyTextView"
        app:layout_constraintEnd_toStartOf="@+id/baseCurrencySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setCurrencyTitle" />

    <TextView
        android:id="@+id/targetCurrencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:text="@string/targetCurrencyDropdown"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/fetchRateButton"
        app:layout_constraintEnd_toStartOf="@+id/targetCurrencySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseCurrencyTextView" />

    <Button
        android:id="@+id/fetchRateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="130dp"
        android:onClick="fetchExchangeRate"
        android:text="@string/fetchRate"
        app:layout_constraintBottom_toTopOf="@+id/currentRateTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/targetCurrencyTextView" />

    <TextView
        android:id="@+id/currentRateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="24dp"
        android:text="@string/resultPlaceholder"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fetchRateButton" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="showMain"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentRateTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>